k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devoxx2023-${TARGET_ROLE}
  namespace: pools
  labels:
    app: devoxx2023
    team: pools
    version: ${VERSION}
    role: ${TARGET_ROLE}
spec:
  replicas: 2
  progressDeadlineSeconds: 240
  selector:
    matchLabels:
      app: devoxx2023
      role: ${TARGET_ROLE}
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: devoxx2023
        role: ${TARGET_ROLE}
    spec:
      serviceAccountName: shawarma-service-account
      containers:
      - name: shawarma
        image: 9412036/azurebluegreennotifier:latest
        resources:
            requests:
              cpu: "0.1"
              memory: 128Mi
            limits:
              cpu: "0.2"
              memory: 128Mi
      - name: main
        image: 9412036/devoxx2023:${VERSION}
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 250m
            memory: 64Mi
