k8s/serviceTest.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: devoxx2023-service-test-${TARGET_ROLE}
  namespace: pools
  labels:
    app: devoxx2023
    role: test-${TARGET_ROLE}
spec:
  type: LoadBalancer
  ports:
  - name: web
    port: 80
    targetPort: 80
  selector:
    app: devoxx2023
    role: ${TARGET_ROLE}
